implemented login and register algorhythms

--- a/backend/views/login.pug
+++ b/backend/views/login.pug
@@ -8,6 +8,6 @@ html(lang="en")
             label Login Test
             input(id="username-field" type="text")
             input(id="password-field" type="text")
-            input(id="login-button" type="submit" value="Login")
-            label(id="message-field")
+            input(id="login-button" type="button" value="Login")
+            label(id="message-field") #{message}
         script(type="text/javascript" src="/scripts/login.js")
