--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 
 :root {
     /* Hauptfarben */
-    --primary: #2E7D32;         
+    --primary: #329637;         
     --primary-var: #1B5E20;      
     --secondary: #FF8F00;        
     --secondary-var: #FF6F00;    
-    --background: #FAFAFA;       
-    --surface: #a8a8a8;         
+    --background: #484848;       
+    --surface: #18331a;         
     --error: #D32F2F;            
     
     /* Textfarben*/
     --on-primary: #FFFFFF;
     --on-secondary: #000000;
-    --on-background: #000000;
-    --on-surface: #000000;
+    --on-background: #ffffff;
+    --on-surface: #ffffff;
     --on-error: #FFFFFF;
     
     
@@ -68,7 +68,7 @@ body {
 }
 
 .nav-link:hover {
-    color: var(--on-primary);
+    color: var(--primary);
 }
 
 .account {
@@ -94,7 +94,7 @@ body {
 .hero-image {
     width: 100%;
     height: 400px;
-    background-color: var(--surface);
+    background-color: var(--secondary);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -111,7 +111,7 @@ body {
 }
 
 .section-title {
-    color: var(--primary);
+    color: var(--on-background);
     margin-bottom: 1.5rem;
     font-size: 1.5rem;
 }
@@ -247,7 +247,7 @@ body {
 }
 
 .reviews-title h2 {
-    color: var(--primary);
+    color: var(--on-surface);
     text-align: center;
 }
 
