--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 :root {
     /* Hauptfarben */
-    --primary: #329637;         
+    --primary: #43bf4a;         
     --primary-var: #1B5E20;      
     --secondary: #FF8F00;        
     --secondary-var: #FF6F00;    
@@ -76,6 +76,11 @@ body {
     align-items: center;
     gap: 0.75rem;
     cursor: pointer;
+    font-weight: 500;
+}
+
+.account:hover {
+    color: var(--primary);
 }
 
 .account-avatar {
@@ -162,7 +167,7 @@ body {
 .slider-controls {
     display: flex;
     justify-content: center;
-    gap: 1rem;
+    gap: 10rem;
     margin-top: 1rem;
 }
 
@@ -170,7 +175,7 @@ body {
     background-color: var(--primary);
     color: var(--on-primary);
     border: none;
-    padding: 0.75rem 1.5rem;
+    padding: 0.5rem 1rem;
     border-radius: var(--border-radius);
     cursor: pointer;
     font-size: 1rem;
