implemented working street map

--- a/backend/views/trail-item.pug
+++ b/backend/views/trail-item.pug
@@ -1,5 +1,5 @@
 mixin trailItem(trail)
     tr
         td 
-            a(href=`/trails/view:${trail.id}`) #{trail.name}
+            a(href=`/trails/${trail.id}`) #{trail.name}
         td #{trail.description}
