--- a/backend/views/trail-list.pug
+++ b/backend/views/trail-list.pug
@@ -2,8 +2,9 @@ extends ./frame
 include ./trail-item
 
 block content
-    li(id="trails")
-        each trail in trails
-            +trailItem(trail)
+    table(id='trails')
+        tbody
+            each trail in trails
+                +trailItem(trail, images)
 
     
