--- a/backend/views/trail-item.pug
+++ b/backend/views/trail-item.pug
@@ -1,5 +1,15 @@
-mixin trailItem(trail)
+mixin trailItem(trail, images)
     tr
         td 
+            div(id='image-container')
+                - var stopFlag = false
+
+                each image in images
+                    if image.trail_id === trail.id && !stopFlag
+                        img(src=`/images/scenery/${image.source}`)
+                        - stopFlag = true
+  
+            
+        td 
             a(href=`/trails/${trail.id}`) #{trail.name}
-        td #{trail.description}
+            p #{trail.description}
