small changes to template

--- a/backend/views/login.pug
+++ b/backend/views/login.pug
@@ -5,7 +5,7 @@ html(lang="en")
         title Login 
     body 
         form
-            label Login Test
+            label Login 
             input(id="username-field" type="text")
             input(id="password-field" type="text")
             input(id="login-button" type="button" value="Login")
