--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -60,6 +60,7 @@ font-family: Arial, Helvetica, sans-serif;  background-color: var(--white);
   display: flex;
   align-items: center;
   gap: 0.75rem;
+  transition: 0.3s;
 }
 
 .logo-img {
@@ -69,8 +70,8 @@ font-family: Arial, Helvetica, sans-serif;  background-color: var(--white);
 }
 
 .logo:hover {
-    scale: 1.1;
-    transition: 0.3s;
+  scale: 1.1;
+  transition: 0.3s;
 }
 
 .nav {
@@ -162,6 +163,7 @@ font-family: Arial, Helvetica, sans-serif;  background-color: var(--white);
   border-radius: var(--border-radius);
   overflow: hidden;
   cursor: pointer;
+  transition: 0.5s ease;
 }
 
 .route-card:hover {
